# DragGAN

./: .dockerignore  .flake8  .gitignore  .gitmodules  LICENSE  README.md  colab_notebook.ipynb  drag_gan.py  gradio_app.py  main.py  pyproject.toml  requirements.txt
docker/: Dockerfile  build.sh  build_gpu.sh  execute.sh  execute_gpu.sh
drag_gan/: drag_gan.py  utils.py
drag_gan/generators/: __init__.py  base.py  styleganv2.py
