[tool.poetry]
name = "drag-gan"
version = "0.1.0"
description = "Unofficial implementation of the paper \"Drag Your GAN: Interactive Point based Manipulation on the Generative Image Manifold\""
authors = ["Adrià Ciurana <info@dreamlearning.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "drag_gan"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
gradio = "3.28.0"
fire = "^0.5.0"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"
qqdm = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
